--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,23 +1,20 @@
 FROM python:3.9-alpine3.13
 
-ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
-
-COPY requirements.txt /tmp/requirements.txt
-
-COPY . /app
 
 WORKDIR /app
 
+COPY requirements.txt /app/requirements.txt
+
 RUN python -m venv /py && \
-    /py/bin/pip install --upgrade pip && \
-    apk add --update --no-cache postgresql-client && \
-    apk add --update --no-cache --virtual .tmp-build-deps \
-        build-base postgresql-dev musl-dev && \
-    /py/bin/pip install -r /tmp/requirements.txt 
+  /py/bin/pip install --upgrade pip && \
+  apk add --update --no-cache postgresql-client && \
+  apk add --update --no-cache --virtual .tmp-build-deps \
+  build-base postgresql-dev musl-dev && \
+  /py/bin/pip install -r /app/requirements.txt  
 
-# RUN pip3 install -r requirements.txt
-RUN python manage.py makemigrations
-RUN python manage.py migrate
+COPY . /app
 
-CMD gunicorn -b 0.0.0.0:8000 --worker-class=gevent --worker-connections=1000 --workers=5 backend.wsgi
+ENV PATH="/py/bin:$PATH"
+
+CMD gunicorn --bind 0.0.0.0:8000 app:app
