--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,46 @@
 version: "3"
 services:
-
-  database:
-    image: postgres:12.7-alpine
-    volumes:
-        - ./backup_data/db:/var/lib/postgresql/data
-    environment:
-        - POSTGRES_DB=postgres
-        - POSTGRES_USER=postgres
-        - POSTGRES_PASSWORD=postgres
-
   backend:
-    build: ./backend
-    volumes:
-      - ./backend:/app
+    ports:
+      - 8000:8000
+    build:
+      context: ./backend/
+      dockerfile: Dockerfile
+    command: sh -c "python manage.py wait_for_db && python manage.py migrate && python && manage.py runserver 0.0.0.0:8000"
+    environment:
+      - DB_HOST=db
+      - DB_NAME=devdb
+      - DB_USER=devuser
+      - DB_PASS=changeme
     depends_on:
       - database
-  
+
   frontend:
-    build: ./frontend
-    volumes:
-      - ./frontend:/app
-    depends_on:
-      - backend
+    build:
+      context: ./frontend
     ports:
       - 80:80
-  
-  nginx_backend_server:
-    build: ./nginx_backend_server
-    ports:
-        - 8000:8000
     depends_on:
-        - backend
+      - backend
+
+  nginx:
+    image: nginx:latest
+    volumes:
+      - .:/frontend/nginx.conf:ro
+    command: /bin/bash -c "envsubst < /frontend/nginx.conf > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
+    ports:
+      - "80"
+    depends_on:
+      - backend
+
+  database:
+    image: postgres:13-alpine
+    volumes:
+      - evy-db-data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+
+volumes:
+  evy-db-data:
